# embedchain-fastdash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  embedchain_utils.py  fly.toml  pyproject.toml  requirements.txt
rag/: config.py  graph.py  knowledge.py  tools.py
scripts/: capture_hero.py
tests/: test_agent.py  test_knowledge.py
