[project]
name = "embedchain-fastdash"
version = "1.0.0"
description = "Chat with your knowledge base — a conversational RAG agent (LangGraph + OpenRouter) built on Fast Dash's native chat mode. A modern rebuild of the original Embedchain demo."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Kedar Dabhadkar" }]
dependencies = [
    "fast-dash[langstage]>=0.5.3",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    # Local, key-free semantic embeddings (ONNX, no torch).
    "fastembed>=0.4",
    # Source loaders: web pages, PDFs, YouTube transcripts.
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pypdf>=5.0",
    "youtube-transcript-api>=0.6",
    "requests>=2.31",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=22.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]
